--- a/index.html
+++ b/index.html
@@ -75,8 +75,16 @@
             </div>
             <button id="clearStatsBtn" class="hidden">Effacer toutes les statistiques</button>
         </section>
-
     </main>
+
+    <!-- 🌟 MODALE POUR LES STATS DES AUTRES JOUEURS -->
+    <div id="userStatsModal" class="modal hidden">
+        <div class="modal-content">
+            <span id="closeModalBtn" class="close">&times;</span>
+            <h3 id="modalTitle">Statistiques</h3>
+            <pre id="modalBody"></pre>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2025 Mon Palmarès Gaming</p>
