--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </main>
 
     <!-- 🌟 MODALE POUR LES STATS DES AUTRES JOUEURS -->
-    <div id="userStatsModal" class="modal hidden">
+    <div id="userStatsModal" class="modal">
         <div class="modal-content">
             <span id="closeModalBtn" class="close">&times;</span>
             <h3 id="modalTitle">Statistiques</h3>
